[gd_scene load_steps=15 format=2]

[ext_resource path="res://DebugOverlay.gd" type="Script" id=1]
[ext_resource path="res://GameRoot.gd" type="Script" id=2]
[ext_resource path="res://Map.gd" type="Script" id=3]
[ext_resource path="res://Map.jpg" type="Texture" id=4]
[ext_resource path="res://Bell Synergies.nksf.ogg" type="AudioStream" id=5]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Animals/MouseExample.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://NPCs/NPCManager.tscn" type="PackedScene" id=9]
[ext_resource path="res://Inside/Inside.gd" type="Script" id=10]
[ext_resource path="res://Outside/Downtown.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 100 ), Vector2( 10, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GlobalAudio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../GlobalAudio:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.979, -71.202 ]
}

[sub_resource type="Animation" id=3]
length = 10.0
tracks/0/type = "method"
tracks/0/path = NodePath("../NPCManager/Jimmy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 6.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "sadness", 1.0, true ],
"method": "set_emotion"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../NPCManager/Jimmy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 6.1, 7.1, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 617.974, -183.628 ), Vector2( 570.097, -74.8523 ), Vector2( -91.5209, -69.8126 ), Vector2( -91.5209, -69.8126 ), Vector2( 570.097, -74.8523 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../NPCManager/Abby:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 3.6, 5.1, 7.6, 9.3, 9.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -332.619, -85 ), Vector2( -332.619, -85 ), Vector2( -332.619, -85 ), Vector2( -151.19, -72.4008 ), Vector2( -151.19, -72.4008 ), Vector2( -330.099, -82.4802 ), Vector2( -330.099, -82.4802 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../NPCManager/Abby:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3, 9.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=4]
length = 60.0
tracks/0/type = "method"
tracks/0/path = NodePath("")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ NodePath("Inside/1MainSt") ],
"method": "goInside"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 3.78, 5 ),
"transitions": PoolRealArray( 1.41421, 1, 1, 1.41421 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NPCManager/Jimmy:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 2.1, 3.7, 5, 6.3, 7, 8.4, 10, 11.3, 14, 14.7, 16.1, 17.7, 19, 20.3, 21, 22.4, 24, 25.3, 26.3, 27, 28.4, 30, 31.3, 32.6, 33.3, 34.7, 36.3, 37.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -343.086, -541.537 ), Vector2( -343.086, -541.537 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -343.086, -541.537 ), Vector2( -343.086, -541.537 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -343.086, -541.537 ), Vector2( -343.086, -541.537 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -343.086, -541.537 ), Vector2( -343.086, -541.537 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -343.086, -541.537 ), Vector2( -343.086, -541.537 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -511.265, -531.447 ), Vector2( -343.086, -541.537 ), Vector2( -343.086, -541.537 ), Vector2( -511.265, -531.447 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("NPCManager/Jimmy:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="GameRoot" type="Node2D"]
position = Vector2( 111.091, 449.635 )
script = ExtResource( 2 )
StartingNeighbourhoodScene = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 738.314, 551.846 )
z_index = 10

[node name="UI" parent="." instance=ExtResource( 8 )]

[node name="Title" parent="UI" index="0"]
modulate = Color( 1, 1, 1, 0 )

[node name="MouseExample" parent="." instance=ExtResource( 7 )]
position = Vector2( -746.111, -883.819 )
z_index = 10

[node name="mouse1" parent="MouseExample" index="1"]
position = Vector2( 1070.53, 428.857 )

[node name="DebugOverlay" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="DEBUG" type="Panel" parent="DebugOverlay"]
visible = false
margin_left = 6.0
margin_top = 14.0
margin_right = 394.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goInside" type="Button" parent="DebugOverlay/DEBUG"]
margin_left = 8.74011
margin_top = 11.63
margin_right = 89.7401
margin_bottom = 36.63
text = "Go Inside"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goOutside" type="Button" parent="DebugOverlay/DEBUG"]
margin_left = 97.5645
margin_top = 18.5596
margin_right = 182.565
margin_bottom = 43.5596
text = "Go Outside"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Sprite" parent="."]
visible = false
position = Vector2( 364.234, -54.832 )
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Map"]
anims/GoToMap = SubResource( 2 )

[node name="Timelines" type="AnimationPlayer" parent="."]
autoplay = "TownCouncil1"
anims/D1Q1 = SubResource( 3 )
anims/TownCouncil1 = SubResource( 4 )

[node name="NPCManager" parent="." instance=ExtResource( 9 )]

[node name="Inside" type="Node2D" parent="."]
script = ExtResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[node name="GlobalAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -67.764
pitch_scale = 0.5
__meta__ = {
"_editor_description_": "for UI, and for non-spatial music"
}

[node name="Outside" type="Node2D" parent="."]

[connection signal="pressed" from="DebugOverlay/DEBUG/goInside" to="DebugOverlay" method="_on_goInside_pressed"]
[connection signal="pressed" from="DebugOverlay/DEBUG/goOutside" to="DebugOverlay" method="_on_goOutside_pressed"]

[editable path="UI"]
[editable path="MouseExample"]
